[gd_scene load_steps=2 format=3 uid="uid://c3il6b6v8471g"]

[ext_resource type="Script" path="res://Scripts/calibrationPanel.gd" id="1_rtcl8"]

[node name="CalibarationPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_rtcl8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RotationLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="RotationSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TranslationLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="TranslationSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CurvatureLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="CurvatureSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="ConfirmCalibration" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm"
